fix missing tags when it shouldnt