@@ -17,7 +17,7 @@ public class DescriptiveValue<T> {
 
     private final T value;
     private final String description;
-    private final List<MutableComponent> translations;
+    private final Function<T, List<MutableComponent>> translation;
 
     private DescriptiveValue(T value) {
         this(value, "", null);
@@ -30,7 +30,7 @@ public class DescriptiveValue<T> {
     public DescriptiveValue(T value, String description, @Nullable Function<T, List<MutableComponent>> translation) {
         this.value = value;
         this.description = description;
-        this.translations = translation == null ? null : translation.apply(this.value);
+        this.translation = translation == null ? t -> null : translation;
     }
 
     public static <T> DescriptiveValue<T> of(T val) {
@@ -105,12 +105,13 @@ public class DescriptiveValue<T> {
     public MutableComponent getTranslation(String alt, Object... args) {
         String key = !this.description.isEmpty() ? this.description : alt;
         MutableComponent translation = null;
-        if (this.translations != null && !this.translations.isEmpty()) {
-            if (this.translations.size() == 1)
-                translation = this.translations.get(0);
+        List<MutableComponent> translations = this.translation.apply(this.value);
+        if (translations != null && !translations.isEmpty()) {
+            if (translations.size() == 1)
+                translation = translations.getFirst();
             else {
                 MutableComponent items = null;
-                for (MutableComponent c : this.translations) {
+                for (MutableComponent c : translations) {
                     if (items == null)
                         items = Component.literal("[").append(c);
                     else
